# panda_arm

./: readme.md
panda_description/: package.xml
panda_description/urdf/: robot_panda_gazebo.urdf
panda_driver/: CMakeLists.txt  package.xml
panda_driver/include/panda_driver/: action_server.h  arm_motor_driver.h  gripper_motor_driver.h  motor_driver.h  trajectory_follow.h
panda_driver/src/: arm_motor_driver.cpp  gripper_motor_driver.cpp  main.cpp  trajectory_follow.cpp
panda_gazebo/: CMakeLists.txt  package.xml
panda_gazebo/config/: panda_gazebo_controllers.yaml  panda_moveit_controllers.yaml
panda_gazebo/launch/: panda_controller_gazebo.launch  panda_controller_moveit.launch
panda_gazebo/worlds/: panda.world  panda_with_grasp.world
panda_grasp/: CMakeLists.txt  package.xml
panda_grasp/config/: agile_parameter.cfg  gpd_parameter.cfg
panda_grasp/pcd_data/: preprocessCloud.pcd  transformCloud.pcd
panda_grasp/scripts/: dex_net_server.py  test_cv_bridge.py
panda_grasp/src/: agile_grasp_server.cpp  gpd_grasp_server.cpp  pointnetgpd_grasp_server.cpp  transform_point_cloud.cpp
panda_grasp/srv/: MyGraspPose.srv
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: kinematics.yaml  panda.srdf  ros_controllers.yaml  sensors_kinect_pointcloud.yaml
panda_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  moveit.rviz  panda_moveit_controller_manager.launch.xml  planning_context.launch  sensor_manager.launch.xml
panda_panda_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
panda_panda_arm_ikfast_plugin/src/: panda_panda_arm_ikfast_moveit_plugin.cpp  panda_panda_arm_ikfast_solver.cpp
panda_planning/: CMakeLists.txt  package.xml
panda_planning/include/panda_planning/: grasp_call.h  scene_perception.h
panda_planning/launch/: motion_planning_api_tutorial.launch  move_group_python_interface_tutorial.launch  planning_scene_tutorial.launch  robot_model_and_robot_state_tutorial.launch
panda_planning/scripts/: move_group_python_interface_tutorial.py
panda_planning/src/: grasp_call.cpp  grasp_test.cpp  motion_planning_api_tutorial.cpp  move_group_interface_tutorial.cpp  pick_place_tutorial.cpp  planning_scene_tutorial.cpp  robot_model_and_robot_state_tutorial.cpp  scene_perception.cpp
